# JudgeGen3WebApp

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
index/: views.py
judge_gen3/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
