[tool.poetry]
name = "judge-gen3-webapp"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "judge_gen3/" },
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
