[tool.poetry]
name = "judge-gen3-webapp"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
pokemon-gen3 = {git = "https://github.com/ijknabla/Pokemon-Gen3.git", rev = "0.0.0a2"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pyproject-flake8 = "^6.0.0.post1"
django-stubs = "^4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.flake8]
exclude = ".venv"
max-line-length = 100
per-file-ignores = [
    "modelicalang/v?_?.py:E501,F403,F405"
]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "judge_gen3.settings"
